--- a/src/OverBlaze/wwwroot/twitch_callback.html
+++ b/src/OverBlaze/wwwroot/twitch_callback.html
@@ -6,24 +6,27 @@
 </head>
 <body>
 
+<p>Authorizing...</p>
+
 <script>
-    const hash = window.location.hash.substring(1);
-    const parts = hash.split('&');
-    for (const part of parts)
-    {
-        const pair = part.split('=', 2);
-        if (pair[0] === 'access_token' && !!pair[1])
+    document.addEventListener('DOMContentLoaded', function() {
+        const hash = window.location.hash.substring(1);
+        const parts = hash.split('&');
+        for (const part of parts)
         {
-            window.localStorage.setItem('twitch_access_token', pair[1]);
+            const pair = part.split('=', 2);
+            if (pair[0] === 'access_token' && !!pair[1])
+            {
+                window.localStorage.setItem('twitch_access_token', pair[1]);
+            }
+            else if (pair[0] === 'id_token' && !!pair[1])
+            {
+                window.localStorage.setItem('twitch_id_token', pair[1]);
+            }
         }
-        else if (pair[0] === 'id_token' && !!pair[1])
-        {
-            window.localStorage.setItem('twitch_id_token', pair[1]);
-        }
-    }
-    
-    window.location.replace("/Dashboard");
-    
+
+        window.location.replace("/Dashboard");
+    });
 </script>
 </body>
 </html>
